Bug 74782 - [Template Manager] search view doesn't hide local view when searching for templates for the first time
Summary: [Template Manager] search view doesn't hide local view when searching for tem...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Jorendc
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-10 10:24 UTC by Jorendc
Modified: 2014-02-10 16:44 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
CurrentView (3 templates on the top) and search view (1 template on the bottom) visible (24.53 KB, image/png)
2014-02-10 10:38 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2014-02-10 10:24:27 UTC
Due to the conversion of the template manager to .ui (see http://cgit.freedesktop.org/libreoffice/core/commit/?id=b29c078c7f193dd7dae74baf89fe1abb9264239c) this behaviour appeared.

How to reproduce:
1) Open LibreOffice
2) Open Template manager (click on 'Templates' in the startcenter) or (ctrl+shift+N)
3) Hit the 'Search' button
4) Type some text

Behaviour: the existing templates, which doesn't match the search terms are still visible

Expected behaviour: if a search term is entered: hide all non-matching templates
Comment 1 Jorendc 2014-02-10 10:38:14 UTC
Created attachment 93754 [details]
CurrentView (3 templates on the top) and search view (1 template on the bottom) visible
Comment 2 Commit Notification 2014-02-10 16:42:53 UTC
Joren De Cuyper committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c9a9708dd6115f9619cf66daa99f2470a8f9d4e

fdo#74782 search view doesn't hide local view when searching first time



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.